<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="ST_BhFMControl" Id="{a8e6e27e-693a-4737-856d-d74c4803e4a7}">
    <Declaration><![CDATA[TYPE ST_BhFMControl :
STRUCT
	xReset	:	BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>