<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.5">
  <GVL Name="GVL_Devices" Id="{c147c728-648e-463f-984d-4f986cb4ad03}">
    <Declaration><![CDATA[VAR_GLOBAL
	
	(* Selector*)
	stSelector	:	ST_Selector;
	stSelector2	:	ST_Selector;
	
	(* Cooler shaker *)
	stTECCtrl	: ARRAY[1..3] OF	ST_TECControl;
	stTECStatus	: ARRAY[1..3] OF	ST_TECStatus;
	
	(* Regulators *)
	stRegSheath	:	ST_Regulator;
	stRegWater	:	ST_Regulator;
	stRegAux	:	ST_Regulator;
	
	stRegProp1	:	ST_Proportionair;
	stRegProp2	:	ST_Proportionair;
	stRegProp3	:	ST_Proportionair;
	stRegProp4	:	ST_Proportionair;
	
	(* Shakers *)
	stShaker01	:	ST_Shaker;
	stShaker02	:	ST_Shaker;
	stShaker03	:	ST_Shaker;
	stShaker04	:	ST_Shaker;
	
	(* Minitti Manifold *)
	stManiVlv1	:	ST_ManifoldValve;
	stManiVlv2	:	ST_ManifoldValve;
	stManiVlv3	:	ST_ManifoldValve;
	stManiVlv4	:	ST_ManifoldValve;
	stManiVlv5	:	ST_ManifoldValve;
	stManiVlv6	:	ST_ManifoldValve;
	stManiVlv7	:	ST_ManifoldValve;
	stManiVlv8	:	ST_ManifoldValve;
	
	(* ALI *)
	stALI	:	ST_ALI;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>